# freedom-mobile-ffi

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
include/: module.modulemap
scripts/: build-xcframework.sh
src/: lib.rs
tests/: smoke.rs
